[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/UI/Timer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/3D/DiscoFloor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Music/track_1.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=4]
[ext_resource path="res://Scenes/3D/StarSkyboxLayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/skybox_shader.tres" type="Material" id=6]
[ext_resource path="res://Scenes/SkyController.gd" type="Script" id=7]
[ext_resource path="res://Assets/bubble_particle.png" type="Texture" id=8]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true
albedo_texture = ExtResource( 8 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.170732, 0.335366, 0.585366, 1 )
colors = PoolColorArray( 1, 0.00390625, 0.89397, 0, 0, 0.53418, 1, 0.858824, 0, 1, 0.80957, 0.169838, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 100

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.460227 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
width = 100
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 5
emission_ring_radius = 110.0
emission_ring_inner_radius = 110.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 1, 0 )
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.2
linear_accel = 5.83
tangential_accel = 0.5
tangential_accel_random = 0.5
scale = 25.0
scale_random = 0.7
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )
anim_speed = 8.7
anim_offset_random = 1.0

[sub_resource type="QuadMesh" id=12]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0509804, 0.0352941, 0.0784314, 0.670588 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
corner_detail = 16

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="3DWorld" type="Spatial" parent="."]

[node name="SkyBox" type="MeshInstance" parent="3DWorld"]
transform = Transform( 150, 0, 0, 0, 150, 0, 0, 0, 150, 0, 32.5294, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )
script = ExtResource( 7 )

[node name="StarSkyboxLayer" parent="3DWorld" instance=ExtResource( 5 )]
transform = Transform( 140, 0, 0, 0, 140, 0, 0, 0, 140, 0, -7.45802, 0 )
skeleton = NodePath("../..")

[node name="DiscoFloor" parent="3DWorld" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="3DWorld"]
transform = Transform( 1, 0, 0, 0, 0.919568, 0.392932, 0, -0.392932, 0.919568, 0, 33.6156, 92.811 )
far = 310.0

[node name="Particles" type="Spatial" parent="3DWorld"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0 )

[node name="Particles" type="Particles" parent="3DWorld/Particles"]
transform = Transform( 1, 0, 0, 0, 1, -5.32907e-15, 0, 5.32907e-15, 1, 0, -50.3266, -1.49985e-06 )
material_override = SubResource( 6 )
amount = 40
lifetime = 9.03
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 12 )

[node name="InitialTimer" type="Control" parent="."]
margin_left = 576.0
margin_top = 384.0
margin_right = 1344.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 384, 128 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="InitialTimer"]
margin_right = 768.0
margin_bottom = 256.0
custom_styles/panel = SubResource( 4 )

[node name="Timer" parent="InitialTimer" instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 736.0
timer_minutes = 10

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
